--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<groupId>com.Devops-Desk</groupId>
-	<artifactId>maven-web-application</artifactId>
+	<artifactId>Maven-WEB-Application</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
 	
